Remove fixed width from progress box on mobile

--- a/src/heart-walk/sass/page-progress.scss
+++ b/src/heart-walk/sass/page-progress.scss
@@ -28,8 +28,6 @@
 }
 
 .heart-page-progress {
-  width: 100%;
-  
   .btn {
     width: 100%;
   }
